backstage/backstage-resources/bs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-service
  namespace: backstage
spec:
  type: ClusterIP
  selector:
    app: backstage
  ports:
    - name: http
      port: 80
      targetPort: 7007
